# Corridor

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
dellfw/: __init__.py  catalog.py  cli.py  core.py  integrity.py  smbios.py
dellfw/firmware/: catalog.json  checksums.json
dellfw/transport/: __init__.py  ec.py  nvme.py  wmi.py
tests/: test_basic.py
